# ComputerUse

./: .env.example  .gitignore  README.md  gui.py  llm_tools.py  main.py  models.py  processor.py  prompt_storage.py  pyproject.toml  requirements.txt  setup.cfg
src/diploma_gui_agent/: gui.py  llm_tools.py  main.py  models.py  processor.py  prompt_storage.py
src/diploma_gui_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
